--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@huggingface/inference": "^2.8.0",
     "@types/chrome": "^0.0.268",
     "@types/dotenv": "^8.2.0",
+    "@types/uuid": "^10.0.0",
     "dotenv": "^16.4.5",
     "openai": "^4.52.7",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "recoil": "^0.7.7",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^2.0.0-beta.25",
